--- a/group/blocks/header/header.css
+++ b/group/blocks/header/header.css
@@ -35,7 +35,7 @@ header nav[aria-expanded='true'] {
     justify-content: space-between;
     gap: 0 32px;
     max-width: unset;
-    padding: 0 32px 0 0;
+    padding: 0;
   }
 
   header nav[aria-expanded='true'] {
@@ -218,10 +218,6 @@ header nav[aria-expanded='true'] .nav-sections ul > li > ul > li {
     width: 219px;
   }
 
-  header nav .nav-brand .icon img {
-    padding-left: 124px;
-  }
-
   header nav .nav-sections {
     display: block;
     visibility: visible;
@@ -234,7 +230,7 @@ header nav[aria-expanded='true'] .nav-sections ul > li > ul > li {
     width: unset;
     background-color: unset;
     color:unset;
-    padding: unset;
+    padding: 0 0 0 var(--spacing-xxl);
   }
 
   header nav[aria-expanded='true'] .nav-sections ul > li {
@@ -252,8 +248,8 @@ header nav[aria-expanded='true'] .nav-sections ul > li > ul > li {
     content: '';
     display: inline-block;
     position: absolute;
-    top: 1.7rem;
-    right: var(--spacing-m);
+    top: 1.5rem;
+    right: var(--spacing-s);
     transform: rotate(135deg);
     width: 6px;
     height: 6px;
